# chronicle

./: .gitignore  .mcp.json  README.md  chronicle.json  components.json  index.html  package-lock.json  package.json  release.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
.chronicle/: kanban.json
c-setup/: DESIGN_PROMPT.md  PLAN.md  PROGRESS.md  PROMPT.md
c-zed/: DESIGN_PROMPT.md  FOLLOWUP-step-evidence.md  PLAN.md  PROGRESS.md  PROMPT.md
design/: CHRONICLE_DESIGN_PROMPT.md  CHRONICLE_V2_HANDOFF.md  mocks-update3.html  shader-demo.html
design/comps/: Chronicle 8 · Setup and Help.dc.html  Chronicle.dc.html
docs/superpowers/plans/: 2026-07-18-agent-chat-enhancements.md  2026-07-18-agent-composer-improvements.md
docs/superpowers/specs/: 2026-07-18-agent-chat-enhancements-design.md  2026-07-18-agent-composer-improvements-design.md
fixes/: phase_1_fixes_plan.md  phase_1_fixes_prompt.md  phase_2_fixes_plan.md  phase_2_fixes_prompt.md  phase_3_fixes_plan.md  phase_3_fixes_prompt.md  phase_4_fixes_plan.md  phase_4_fixes_prompt.md  phase_5_fixes_plan.md  phase_5_fixes_prompt.md  phase_6_fixes_plan.md  phase_6_fixes_prompt.md  phase_7_fixes_plan.md  phase_7_fixes_prompt.md
skill/chronicle-init/: SCHEMA.md  SKILL.md
skill/chronicle-init/examples/: loupe.chronicle.json  (+1 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: acp.rs  main.rs  setup.rs
src/lib/: agent-session.ts  help-content.ts  ipc.ts  journal.ts  kanban-store.ts  mini-md.tsx  picker-data.ts  repo-data.ts  roadmap-data.ts  run-flags.ts  setup-store.ts  term-sessions.ts  updates.ts  utils.ts
src/overlays/: CommandPalette.tsx  ConfirmDialog.tsx  NewProjectDialog.tsx  SearchOverlay.tsx  ShortcutsOverlay.tsx  toasts.tsx
src/screens/: Picker.tsx  RecentCard.tsx  Shell.tsx
test/: golden.sh
ui/: index.html
ui-legacy/: index.html
(+51 files in other folders)
