[package]
name = "chronicle"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
portable-pty = "0.9"
base64 = "0.22"
regex = "1"
sha2 = "0.10"
libc = "0.2" # SIGTERM for init_cancel (graceful stop before SIGKILL)
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
notify = "6"

[profile.release]
strip = true
lto = true
